src/objects/CI_R2R_Budget__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Line__c</fullName>
        <label>Budget Line</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CI_R2R_Innovation__c</fullName>
        <label>CI_R2R Innovation</label>
        <referenceTo>CI_R2R_Innovation__c</referenceTo>
        <relationshipLabel>R2R Budget</relationshipLabel>
        <relationshipName>R2R_Budget</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Committed_Amount__c</fullName>
        <label>Committed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Committed_Amount_in_EUR__c</fullName>
        <formula>text( Committed_Amount__c * Conversion_Rate__c ) &amp; &apos; &apos; &amp; &apos;EUR&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed Amount in EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <picklist>
            <picklistValues>
                <fullName>2646</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5069</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1388</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1609</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3128</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2465</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conversion_Rate__c</fullName>
        <label>EUR Conversion Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <picklist>
            <picklistValues>
                <fullName>17439</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>86ROW15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A956000242</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B600100847</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C002R872</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P879</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P977</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A956000632</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P128</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17441</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1105700018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>86I4451</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A956000239</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B500171733</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C002R873</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02R873</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A956000847</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A956000848</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B600171947</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02P008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UU02O103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A956001274</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Type_Description__c</fullName>
        <label>Cost Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DO_PWO_SP_NPR__c</fullName>
        <label>DO/ PWO/ SP/ NPR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount_in_EUR__c</fullName>
        <formula>text(Forecast_Amount__c  * Conversion_Rate__c ) &amp; &apos; &apos;  &amp; &apos;EUR&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Amount in EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ICC_Number2__c</fullName>
        <formula>IF( OR(ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;Account Reconciliation&apos;), ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;Journal Entries&apos;) ,
ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c,&apos;Continuous Improvement&apos;) , ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;Fixed Assets&apos;) ,
ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;GL MDM&apos;) , ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;Tools&apos;) ,
ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;Project&apos;) , ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;SAP Roles&apos;) ,
ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;GPM&apos;) , ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;FX Revaluation&apos;) ,
ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;Financial Reporting&apos;) , ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;Period-End&apos;) ) , &apos;ICC13071&apos; ,
IF( ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;Intercompany&apos;) , &apos;ICC11825&apos;,
IF( ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;Direct Tax&apos;) , &apos;ICC13605&apos;,
IF( ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;Indirect Tax&apos;) , &apos;ICC13606&apos;,
IF( ISPICKVAL( CI_R2R_Innovation__r.R2R_SME_Area__c , &apos;SCOA&apos;) , &apos;ICC14131&apos;, &apos;&apos;
)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICC Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Innovation_Funnel_No__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id , 
CI_R2R_Innovation__r.Project3__c
,&apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Innovation Funnel No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Currency__c</fullName>
        <label>Local Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>CI_R2R_Innovation__r.Project_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Cross_charging_team__c</fullName>
        <label>Vendor/Cross charging team</label>
        <picklist>
            <picklistValues>
                <fullName>ACN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UL internal cross-charge</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CI R2R Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CI_R2R_Innovation__c</columns>
        <columns>Innovation_Funnel_No__c</columns>
        <columns>Budget_Line__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Cost_Type_Description__c</columns>
        <columns>ICC_Number2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>CI_R2R Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI R2R Budget</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>